2006-03-18 [colin]	2.0.0cvs154

	* src/textview.c
		Fix text cursor ;)

2006-03-18 [colin]	2.0.0cvs153

	* src/gtk/filesel.c
		Make sure we hide the preview if we didn't get
		a filename

2006-03-18 [colin]	2.0.0cvs152

	* src/summaryview.c
		Set cursor to watch for execution (fixes lack
		of watch-cursor when dnd'ing hundreds of mails)
	* src/gtk/filesel.c
		Check that mime type is 'image/*' before updating
		the preview (maybe fix crashes on Solaris+gtk2.8.4 ?)

2006-03-18 [colin]	2.0.0cvs151

	* src/mainwindow.c
	* src/textview.c
	* src/textview.h
		Put a watch cursor in textview too when the mainwindow's
		cursor in a watch

2006-03-18 [colin]	2.0.0cvs150

	* src/folder.c
		Change wrong asserts to simple tests

2006-03-17 [colin]	2.0.0cvs149

	* src/mainwindow.c
	* src/mainwindow.h
	* src/prefs_msg_colors.c
	* src/summaryview.c
	* src/summaryview.h
	* src/gtk/colorlabel.c
	* src/gtk/colorlabel.h
		Add a color label menu in the main menubar
		Add (fixed) accels Ctrl-{0-7} to change the color
		They have to be fixed because the menu's dynamic,
		the items are complex widgets, hence we can't use
		a GtkItemFactory.


2006-03-17 [wwp]	2.0.0cvs148

	* src/compose.c
		rollback few lines from my previous commit (those lines come from
		a pending patch, accidentally commited, even if neutral as they are
		commented out).

2006-03-17 [wwp]	2.0.0cvs147

	* src/compose.c
		fix a compilation warning (wrong return type, introduced w/ cvs143), and
		applied code style/indentation to the modified function.

2006-03-17 [wwp]	2.0.0cvs146

	* src/procmsg.c
	* src/compose.c
		fix for bug #908: some IMAP servers dislike \x7f char in the RMID (thanks to Colin).

2006-03-17 [paul]

	2.1.0-rc1 released

2006-03-17 [paul]	2.0.0cvs145

	* src/main.c
		addressbook_read_file() was called twice
	* src/textview.c
		X-Mailer highlighting

2006-03-16 [colin]	2.0.0cvs144

	* src/sourcewindow.c
	* src/sourcewindow.h
		And the last one, in source window.

2006-03-16 [colin]	2.0.0cvs143
