@@ -1,3 +1,10 @@
+2006-03-19 [wwp]	2.0.0cvs155
+
+	* src/addressbook.c
+		allow sorting by name/email/remarks, ensure that right-pane's contents
+		matches the left-pane selection (cleared when appropriate).
+		Patch by Pawel Pekala <c0rn@o2.pl>.
+
 2006-03-18 [colin]	2.0.0cvs154
 
 	* src/textview.c
